// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readConfig config file should match snapshot 1`] = `
Object {
  "configDirectoryPath": ".",
  "detectedLocalConfig": true,
  "env": Object {
    "development": Object {
      "config": Object {
        "SCRIPT_DEBUG": true,
        "TEST": 100,
        "TEST_VAL1": 1,
        "TEST_VAL2": "hello",
        "TEST_VAL3": false,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:2000/",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:2000/",
        "WP_TESTS_DOMAIN": "http://localhost:2000/",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": null,
      "mappings": Object {},
      "phpVersion": null,
      "pluginSources": Array [],
      "port": 2000,
      "themeSources": Array [],
    },
    "tests": Object {
      "config": Object {
        "SCRIPT_DEBUG": false,
        "TEST": 200,
        "TEST_VAL1": 1,
        "TEST_VAL2": "hello",
        "TEST_VAL3": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:1000/",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:1000/",
        "WP_TESTS_DOMAIN": "http://localhost:1000/",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": null,
      "mappings": Object {},
      "phpVersion": null,
      "pluginSources": Array [],
      "port": 1000,
      "themeSources": Array [],
    },
  },
  "name": ".",
}
`;

exports[`readConfig wp config values should use default config values 1`] = `
Object {
  "SCRIPT_DEBUG": false,
  "WP_DEBUG": false,
  "WP_ENVIRONMENT_TYPE": "local",
  "WP_HOME": "http://localhost:8889/",
  "WP_PHP_BINARY": "php",
  "WP_SITEURL": "http://localhost:8889/",
  "WP_TESTS_DOMAIN": "http://localhost:8889/",
  "WP_TESTS_EMAIL": "admin@example.org",
  "WP_TESTS_TITLE": "Test Blog",
}
`;

exports[`readConfig wp config values should use default config values 2`] = `
Object {
  "SCRIPT_DEBUG": true,
  "WP_DEBUG": true,
  "WP_ENVIRONMENT_TYPE": "local",
  "WP_HOME": "http://localhost:8888/",
  "WP_PHP_BINARY": "php",
  "WP_SITEURL": "http://localhost:8888/",
  "WP_TESTS_DOMAIN": "http://localhost:8888/",
  "WP_TESTS_EMAIL": "admin@example.org",
  "WP_TESTS_TITLE": "Test Blog",
}
`;
